[gd_scene load_steps=4 format=2]

[ext_resource path="res://FontsRes/pixel_mono_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/SidePanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="SidePanel" type="PanelContainer"]
margin_left = 744.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 240, 0 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 240.0
margin_bottom = 560.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 550.0
custom_constants/separation = 15

[node name="InfoLabel" type="Label" parent="MarginContainer/Rows"]
margin_right = 220.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_fonts/font = ExtResource( 1 )

[node name="RoomNameLable" type="Label" parent="MarginContainer/Rows"]
margin_top = 32.0
margin_right = 220.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )

[node name="RoomDescription" type="RichTextLabel" parent="MarginContainer/Rows"]
margin_top = 64.0
margin_right = 220.0
margin_bottom = 82.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="NPCLable" type="RichTextLabel" parent="MarginContainer/Rows"]
margin_top = 97.0
margin_right = 220.0
margin_bottom = 115.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="ItemLabel" type="RichTextLabel" parent="MarginContainer/Rows"]
margin_top = 130.0
margin_right = 220.0
margin_bottom = 148.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="MachineLabel" type="RichTextLabel" parent="MarginContainer/Rows"]
margin_top = 163.0
margin_right = 220.0
margin_bottom = 181.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="ExitLabel" type="RichTextLabel" parent="MarginContainer/Rows"]
margin_top = 196.0
margin_right = 220.0
margin_bottom = 214.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="HelpLabel" type="RichTextLabel" parent="MarginContainer/Rows"]
margin_top = 504.0
margin_right = 220.0
margin_bottom = 540.0
size_flags_vertical = 10
custom_colors/default_color = Color( 0.698039, 0.545098, 0.411765, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Usa el comando 'ayuda' para ver la lista de comandos"
text = "Usa el comando 'ayuda' para ver la lista de comandos"
fit_content_height = true
